--- a/.github/workflows/trigger-embed.yml
+++ b/.github/workflows/trigger-embed.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Embed Service
-        env:
+        env: # The API keys are the same as those used by the AI Assistant. There is only one (production) database. 
           PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
