--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
   },
   "dependencies": {
     "@babel/helper-module-transforms": "^7.17.7",
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/plugin-google-gtag": "2.4.3",
-    "@docusaurus/plugin-google-tag-manager": "^3.5.2",
-    "@docusaurus/preset-classic": "2.4.3",
-    "@docusaurus/theme-mermaid": "2.4.3",
-    "@mdx-js/react": "^1.6.21",
+    "@docusaurus/core": "3.8.1",
+    "@docusaurus/plugin-google-gtag": "3.8.1",
+    "@docusaurus/plugin-google-tag-manager": "3.8.1",
+    "@docusaurus/preset-classic": "3.8.1",
+    "@docusaurus/theme-mermaid": "3.8.1",
+    "@mdx-js/react": "^3.0.0",
+    "axios": "^1.6.0",
     "clsx": "^1.1.1",
     "compare-versions": "^5.0.1",
     "date-fns": "2.21.3",
+    "prism-react-renderer": "^2.1.0",
     "raw-loader": "^4.0.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-flow-renderer": "^9.6.8",
     "react-particles": "^2.5.3",
     "react-player": "^2.9.0",
@@ -47,19 +49,24 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@tsconfig/docusaurus": "^1.0.2",
+    "@docusaurus/module-type-aliases": "3.8.1",
+    "@docusaurus/tsconfig": "3.8.1",
+    "@docusaurus/types": "3.8.1",
     "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
+    "@types/react": "^18.2.29",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "chokidar": "^3.6.0",
-    "typescript": "^4.1.3"
+    "glob": "^11.0.2",
+    "typescript": "~5.2.2"
   },
   "resolutions": {
     "trim": "^0.0.3",
     "got": "^11.8.5",
     "cytoscape": "3.28.1"
+  },
+  "engines": {
+    "node": ">=18.0"
   },
   "packageManager": "yarn@3.2.3"
 }
