--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/plugin-client-redirects": "^3.8.1",
     "@docusaurus/plugin-google-gtag": "3.8.1",
     "@docusaurus/plugin-google-tag-manager": "3.8.1",
+    "@docusaurus/plugin-sitemap": "^3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
     "@docusaurus/theme-mermaid": "3.8.1",
     "@mdx-js/react": "^3.0.0",
