add help text generator
Signed-off-by: Hunter Achieng <achienghunter@gmail.com>

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "clear": "docusaurus clear"
+    "clear": "docusaurus clear",
+    "add-help-sections": "node scripts/add-help-section.js"
   },
   "dependencies": {
     "@babel/helper-module-transforms": "^7.17.7",
