--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@docusaurus/preset-classic": "3.8.1",
     "@docusaurus/theme-mermaid": "3.8.1",
     "@mdx-js/react": "^3.0.0",
-    "axios": "^1.6.0",
+    "axios": "1.12.0",
+    "brace-expansion": "1.1.12",
     "clsx": "^1.1.1",
     "compare-versions": "^5.0.1",
     "date-fns": "2.21.3",
+    "form-data": "4.0.4",
+    "mermaid": "11.10.1",
     "prism-react-renderer": "^2.1.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
